@@ -2,6 +2,8 @@ package com.jtradebot.processor.service.entry;
 
 import com.jtradebot.processor.config.DynamicStrategyConfigService;
 import com.jtradebot.processor.config.ScoringConfigurationService;
+import com.jtradebot.processor.handler.DateTimeHandler;
+import com.jtradebot.processor.indicator.SupportResistanceIndicator;
 import com.jtradebot.processor.manager.TickDataManager;
 import com.jtradebot.processor.model.indicator.FlattenedIndicators;
 import com.jtradebot.processor.model.strategy.FlatMarketFilteringConfig;
@@ -32,6 +34,7 @@ public class UnstableMarketConditionAnalysisService {
     private final TickDataManager tickDataManager;
     private final DynamicStrategyConfigService configService;
     private final ScoringConfigurationService scoringConfigService;
+    private final SupportResistanceIndicator supportResistanceIndicator;
 
     public boolean isMarketConditionSuitable(Tick tick, FlattenedIndicators indicators) {
         try {
@@ -92,11 +95,11 @@ public class UnstableMarketConditionAnalysisService {
             // Separate mandatory and optional failed filters
             List<FilterResult> mandatoryFailedFilters = filterResults.stream()
                     .filter(result -> !result.isPassed() && result.isMandatory())
-                    .collect(Collectors.toList());
+                    .toList();
             
             List<FilterResult> optionalFailedFilters = filterResults.stream()
                     .filter(result -> !result.isPassed() && !result.isMandatory())
-                    .collect(Collectors.toList());
+                    .toList();
             
             // Check conditions: mandatory filters must all pass, optional filters can fail up to maxOptionalFiltersToIgnore
             boolean mandatoryConditionsMet = mandatoryFailedFilters.isEmpty();
@@ -223,6 +226,53 @@ public class UnstableMarketConditionAnalysisService {
                         
                 passed = !overbought && !oversold;
                 details = String.format("Overbought: %s, Oversold: %s", overbought, oversold);
+                break;
+                
+            case "directionalStrength":
+                double directionalStrength = calculateDirectionalStrength(tick, indicators);
+                passed = directionalStrength >= filter.getThreshold();
+                details = String.format("Directional strength: %.2f (threshold: %.2f)", 
+                        directionalStrength, filter.getThreshold());
+                break;
+                
+            case "consecutiveSameColorCandles":
+                String instrumentToken = String.valueOf(tick.getInstrumentToken());
+                
+                // Get timeframe from filter configuration, default to FIVE_MIN
+                String timeframeStr = filter.getTimeframe() != null ? filter.getTimeframe() : "FIVE_MIN";
+                com.jtradebot.processor.model.enums.CandleTimeFrameEnum timeframe = com.jtradebot.processor.model.enums.CandleTimeFrameEnum.valueOf(timeframeStr);
+                
+                // Get analysis window from filter configuration, default to 10
+                int analysisWindow = filter.getAnalysisWindow() != null ? filter.getAnalysisWindow() : 10;
+                
+                BarSeries barSeries = tickDataManager.getBarSeriesForTimeFrame(instrumentToken, timeframe);
+                int consecutiveSameColorCount = calculateConsecutiveSameColorCandles(barSeries, analysisWindow);
+                passed = consecutiveSameColorCount < filter.getMaxConsecutiveCount();
+                details = String.format("Consecutive same color candles: %d (max allowed: %d, timeframe: %s, analysis window: %d)", 
+                        consecutiveSameColorCount, filter.getMaxConsecutiveCount(), timeframeStr, analysisWindow);
+                break;
+                
+            case "nearToSupportResistance":
+                // Check if price is near support/resistance or round figures
+                boolean nearSupportResistance = Boolean.TRUE.equals(indicators.getNear_support_resistance_or_round_figure());
+                passed = !nearSupportResistance; // Filter passes when NOT near support/resistance
+                details = String.format("Near support/resistance check: %s (Price: %.2f)", 
+                        nearSupportResistance ? "NEAR" : "CLEAR", tick.getLastTradedPrice());
+                break;
+                
+            case "tradingHours":
+                // Check if current time is within trading hours
+                boolean withinTradingHours = DateTimeHandler.withinTradingHours(
+                    filter.getStartHour(), filter.getStartMinute(), 
+                    filter.getEndHour(), filter.getEndMinute(), 
+                    tick.getTickTimestamp()
+                );
+                passed = withinTradingHours; // Filter passes when within trading hours
+                details = String.format("Trading hours check: %s (Time: %s, Start: %02d:%02d, End: %02d:%02d)", 
+                        withinTradingHours ? "WITHIN" : "OUTSIDE", 
+                        new java.text.SimpleDateFormat("HH:mm:ss").format(tick.getTickTimestamp()),
+                        filter.getStartHour(), filter.getStartMinute(),
+                        filter.getEndHour(), filter.getEndMinute());
                 break;
                 
             default:
@@ -377,6 +427,65 @@ public class UnstableMarketConditionAnalysisService {
 
         } catch (Exception e) {
             log.error("Error analyzing recent candles: {}", e.getMessage());
+        }
+    }
+
+    /**
+     * Calculate the number of consecutive same color candles
+     * @param barSeries The bar series to analyze
+     * @param lookbackBars Number of bars to look back (default 10)
+     * @return Number of consecutive same color candles
+     */
+    private int calculateConsecutiveSameColorCandles(BarSeries barSeries, int lookbackBars) {
+        try {
+            if (barSeries.getBarCount() < lookbackBars) {
+                return 0;
+            }
+
+            int consecutiveCount = 0;
+            String currentColor = null;
+
+            // Start from the most recent bar and go backwards
+            for (int i = barSeries.getBarCount() - 1; i >= barSeries.getBarCount() - lookbackBars; i--) {
+                Bar bar = barSeries.getBar(i);
+                String candleColor = determineCandleColor(bar);
+
+                if (currentColor == null) {
+                    // First candle
+                    currentColor = candleColor;
+                    consecutiveCount = 1;
+                } else if (candleColor.equals(currentColor)) {
+                    // Same color as previous
+                    consecutiveCount++;
+                } else {
+                    // Different color, break the streak
+                    break;
+                }
+            }
+
+            return consecutiveCount;
+
+        } catch (Exception e) {
+            log.error("Error calculating consecutive same color candles: {}", e.getMessage());
+            return 0;
+        }
+    }
+
+    /**
+     * Determine the color of a candle (GREEN, RED, or NEUTRAL)
+     * @param bar The bar to analyze
+     * @return Color of the candle
+     */
+    private String determineCandleColor(Bar bar) {
+        double openPrice = bar.getOpenPrice().doubleValue();
+        double closePrice = bar.getClosePrice().doubleValue();
+        
+        if (closePrice > openPrice) {
+            return "GREEN";
+        } else if (closePrice < openPrice) {
+            return "RED";
+        } else {
+            return "NEUTRAL"; // Doji or neutral candle
         }
     }
 
